--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Online tech shop backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node index.js"
   },
   "repository": {
@@ -30,5 +30,8 @@
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.0",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "mocha": "^10.0.0"
   }
 }
